# mcpServer

./: .gitignore  README.md  pyproject.toml
backend/: db.py  main.py  models.py  schemas.py
backend/core/: config.py
backend/routers/: gamification.py  media.py  sessions.py  srs.py
backend/services/: gamification.py  grading.py  media.py  session_engine.py  srs.py  whatsapp.py
mcp-bearer-token/: mcp_starter.py
